modules/cli/src/test/resources/good/misc/globals/gchoice/Choice03.scr
module good.misc.globals.gchoice.Choice03;

global protocol Choice3(role A, role B)
{
	l1() from A to B;
	choice at B
	{
		l1() from B to A;
	}
	or
	{
		l2() from B to A;
	}
}

