modules/cli/src/test/resources/bad/wfchoice/gchoice/Choice06.scr
module bad.wfchoice.gchoice.Choice06;


global protocol Choice6(role A, role B)
{
	choice at A
	{
		l1() from A to B;
	}
	or
	{
		() from A to B;
	}
	l1() from A to B;
	() from A to B;
	choice at A
	{
		//l1() from A to B;  // Comment is bad
		() from A to B;
		2() from A to B;
	}
	or
	{
		() from A to B;
		3() from B to A;
	}
}

